Support assembling 3rd-party modules